fixed slider overflow

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,6 +14,7 @@
 
   body {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button,
